xidlc/tests/invalid/http_security_duplicate_basic.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidDuplicateSecurityService {
    @http_basic
    @http_basic
    @get(path = "/reports")
    string list_reports();
};
